--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFundamental">
-
+        <activity
+            android:name=".navigation.NavigationActivity"
+            android:exported="false" />
         <activity
             android:name=".fragment.FragmentActivity"
             android:exported="false" />
